# rfi-file-monitor

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  test-file-writer.py
.github/workflows/: black.yml  ci.yml  codeql-analysis.yml  publish-to-pypi.yml  update-docs.yml
conda-build/: bld.bat  build.sh  menu-windows.json  meta.yaml
docs/: Gemfile  _config.yml  contribute.md  engines.md  index.md  install.md  operations.md  update_docs.py  usage.md
docs/_data/: navigation.yml
docs/_engines/: aws_s3_bucket_engine.md  ceph_s3_bucket_engine.md  directory_watchdog_engine.md  file_watchdog_engine.md  temporary_file_engine.md  urls_engine.md
docs/_layouts/: default.html
docs/_misc/: queue_manager.md
docs/_operations/: directory_compressor.md  dropbox_uploader.md  dummy_operation.md  local_copier.md  s3_copier.md  s3_downloader.md  s3_uploader.md  scicataloguer.md  sftp_uploader.md  url_downloader.md
docs/misc/: queue_manager.md
instrument-config/: test-instrument-prefs.yml
rfi_file_monitor/: __init__.py  application.py  applicationwindow.py  dummy_operation.py  engine.py  engine_advanced_settings.py  file.py  job.py  metadataparser.py  operation.py  preferences.py  preferenceswindow.py  queue_manager.py  utils.py  version.py
rfi_file_monitor/data/: filter-popover.ui  menus-appmenu.ui  menus-common.ui  rfi-instruments.yaml
rfi_file_monitor/docs/: queue_manager.pango
rfi_file_monitor/engines/: aws_s3_bucket_engine.py  aws_s3_bucket_engine_advanced_settings.py  base_s3_bucket_engine.py  ceph_s3_bucket_engine.py  ceph_s3_bucket_engine_advanced_settings.py  directory_monitor_engine.py  directory_watchdog_engine.py  directory_watchdog_engine_advanced_settings.py  file_watchdog_engine.py  file_watchdog_engine_advanced_settings.py  temporary_file_engine.py  urls_engine.py
rfi_file_monitor/engines/docs/: aws_s3_bucket_engine.pango  ceph_s3_bucket_engine.pango  directory_watchdog_engine.pango  file_watchdog_engine.pango  template.pango  temporary_file_engine.pango  urls_engine.pango
rfi_file_monitor/files/: directory.py  regular_file.py  s3_object.py  url.py
rfi_file_monitor/metadataparsers/: csv_metadata_parser.py
rfi_file_monitor/operations/: directory_compressor.py  dropbox_uploader.py  dummy_dependent_operation.py  dummy_folder_operation.py  dummy_operation.py  local_copier.py  s3_copier.py  s3_downloader.py  s3_uploader.py  scicataloguer.py  sftp_uploader.py  url_downloader.py
rfi_file_monitor/operations/docs/: dependent_dummy_operation.pango  directory_compressor.pango  dropbox_uploader.pango  dummy_operation.pango  local_copier.pango  s3_copier.pango  s3_downloader.pango  s3_uploader.pango  scicataloguer.pango  sftp_uploader.pango  template.pango  url_downloader.pango
rfi_file_monitor/utils/: __init__.py  decorators.py  exceptions.py  googleanalytics.py  helpwindow.py  paramswindow.py  s3.py  widgetparams.py
tests/: tests.py
tests/test_data/test_dir/: myfile1.txt  myfile2.txt
