[metadata]
name = rfi-file-monitor
version = 0.1.11
description = Easy to use file monitor GUI with user-definable operations
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Schoonjans
author_email = Tom.Schoonjans@rfi.ac.uk
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
url = https://github.com/RosalindFranklinInstitute/rfi-file-monitor
project-urls =
    GitHub = https://github.com/RosalindFranklinInstitute/rfi-file-monitor
    Bug-Tracker = https://github.com/RosalindFranklinInstitute/rfi-file-monitor/issues

[options]
include_package_data = True
install_requires =
    PyGobject
    boto3
    munch
    watchdog
    PyYaml
    paramiko
    bugsnag
    dropbox
    keyring
    tenacity
packages = find:
python_requires = >=3.8
zip_safe = False

[options.entry_points]
rfi_file_monitor.operations =
    DummyOperation = rfi_file_monitor.operations.dummy_operation:DummyOperation
    S3Uploader = rfi_file_monitor.operations.s3_uploader:S3UploaderOperation
    SftpUploader = rfi_file_monitor.operations.sftp_uploader:SftpUploaderOperation
    LocalCopier = rfi_file_monitor.operations.local_copier:LocalCopierOperation
    DropboxUploader = rfi_file_monitor.operations.dropbox_uploader:DropboxUploaderOperation
    S3Downloader = rfi_file_monitor.operations.s3_downloader:S3DownloaderOperation
    S3Copier = rfi_file_monitor.operations.s3_copier:S3CopierOperation
rfi_file_monitor.engines =
    FileWatchdogEngine = rfi_file_monitor.engines.file_watchdog_engine:FileWatchdogEngine
    TemporaryFileEngine = rfi_file_monitor.engines.temporary_file_engine:TemporaryFileEngine
    AWSS3BucketEngine = rfi_file_monitor.engines.aws_s3_bucket_engine:AWSS3BucketEngine
gui_scripts =
    rfi-file-monitor = rfi_file_monitor:main

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
