[metadata]
name = rfi-file-monitor
version = 0.2.9
description = Easy to use file monitor GUI with user-definable operations
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Schoonjans
author_email = Tom.Schoonjans@rfi.ac.uk
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
url = https://github.com/RosalindFranklinInstitute/rfi-file-monitor
project-urls =
    GitHub = https://github.com/RosalindFranklinInstitute/rfi-file-monitor
    Bug-Tracker = https://github.com/RosalindFranklinInstitute/rfi-file-monitor/issues
    Documentation = https://rosalindfranklininstitute.github.io/rfi-file-monitor/

[options]
include_package_data = True
install_requires =
    PyGobject
    boto3
    munch
    watchdog !=0.10.4
    PyYaml
    paramiko
    bugsnag
    dropbox
    keyring
    tenacity
    requests
    pika
    python-dateutil
packages = find:
python_requires = >=3.8
zip_safe = False

[options.entry_points]
rfi_file_monitor.operations =
    DummyOperation = rfi_file_monitor.operations.dummy_operation:DummyOperation
    S3Uploader = rfi_file_monitor.operations.s3_uploader:S3UploaderOperation
    SftpUploader = rfi_file_monitor.operations.sftp_uploader:SftpUploaderOperation
    DropboxUploader = rfi_file_monitor.operations.dropbox_uploader:DropboxUploaderOperation
    S3Downloader = rfi_file_monitor.operations.s3_downloader:S3DownloaderOperation
    S3Copier = rfi_file_monitor.operations.s3_copier:S3CopierOperation
    DirectoryCompressor = rfi_file_monitor.operations.directory_compressor:DirectoryCompressorOperation
rfi_file_monitor.engines =
    FileWatchdogEngine = rfi_file_monitor.engines.file_watchdog_engine:FileWatchdogEngine
    TemporaryFileEngine = rfi_file_monitor.engines.temporary_file_engine:TemporaryFileEngine
    AWSS3BucketEngine = rfi_file_monitor.engines.aws_s3_bucket_engine:AWSS3BucketEngine
    DirectoryWatchdogEngine = rfi_file_monitor.engines.directory_watchdog_engine:DirectoryWatchdogEngine
    CephS3BucketEngine = rfi_file_monitor.engines.ceph_s3_bucket_engine:CephS3BucketEngine
rfi_file_monitor.preferences =
    AllowedFilePatternsPreference = rfi_file_monitor.preferences:AllowedFilePatternsPreference
    IgnoredFilePatternsPreference = rfi_file_monitor.preferences:IgnoredFilePatternsPreference
rfi_file_monitor.files =
    RegularFile = rfi_file_monitor.files.regular_file:RegularFile
    WeightedRegularFile = rfi_file_monitor.files.regular_file:WeightedRegularFile
    S3Object = rfi_file_monitor.files.s3_object:S3Object
    Directory = rfi_file_monitor.files.directory:Directory
console_scripts =
    rfi-file-monitor = rfi_file_monitor:main

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
